# miniql

./: Cargo.toml
.github/perf/: sql_budgets.toml
.github/workflows/: rust.yml
benches/: aggregate.rs  join.rs  join_sort_merge.rs  read_table.rs  sql.rs
benches/support/: alloc_profiler.rs
miniql-cli/: Cargo.toml
miniql-cli/src/: main.rs
scripts/: check_sql_perf_budget.py  run_perf_benches.sh  run_sql_profiles.sh  run_sql_profiles_windows.ps1  summarize_perf_metrics.py
src/: btree.rs  compare.rs  db.rs  decoder.rs  error.rs  fs.rs  ident.rs  index.rs  introspect.rs  join.rs  lib.rs  pager.rs  query.rs  schema.rs  sql.rs  table.rs
tests/: join.rs  join_more.rs  join_regressions.rs  query_aggregate.rs  query_scan.rs  sql_negative.rs  sql_parity.rs  sql_query.rs  table_read.rs  util.rs
tests/fixtures/: interior.db  join.db  join_pk.db  join_unique.db  overflow.db  users.db  users_1024.db  users_8192.db
