[workspace]
members = [".", "miniql-cli"]
default-members = [".", "miniql-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
mem_forget = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
single_match_else = "warn"
string_to_string = "warn"
unused_self = "warn"
unused_trait_names = "warn"
use_self = "warn"

[package]
name = "miniql"
version.workspace = true
edition.workspace = true

[dependencies]
